--- a/project-root/admin/manage_users/manage_users.html
+++ b/project-root/admin/manage_users/manage_users.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Manage Users</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title> Manage Users </title>
+    <link rel="stylesheet" href="../css/style.css" >
 </head>
 <body>
-<nav>
-    <a href="/add/">Add</a> |
-    <a href="/remove/">Remove</a>  |
-    <a href="/update/">Update</a> |
-    <a href="/assign role/">Assign Role</a>
-</nav>
+    <h1>Manage Users Page</h1>
 
-<h1>Manage Users</h1>
-<p>This is a paragraph.</p>
-<article>
-    <header>
-        <h1> Aheading here</h1>
-        <p> Posted by joe</p>
-        <p> Some blabla bla </p>
-    </header>
-    <p> Lorem ipsum</p>
-</article>
+    <nav class="btsa">
+        <ul>
+            <a href="add_user"> <button style="background-color: rgb(187, 130, 240);color: #f5f5f5; border-radius: 5px;">Add User</button></a> 
+            <a href="remove_user"> <button style="background-color: rgb(187, 130, 240);color: #f5f5f5; border-radius: 5px;">Remove User</button></a> 
+            <a href="update_user"> <button style="background-color: rgb(187, 130, 240);color: #f5f5f5; border-radius: 5px;">Update User</button></a> 
+        </ul>
+    </nav>   
+
+    <main>
+        <h3 style="margin: 30px;">This is the Manage Users Page</h3>
+        <p style="margin: 30px;"> This section allows the administrator to see all registered users, review their details, and efficiently manage them by adding, removing, or updating their information.</p>
+    </main>
+
 
 </body>
 </html>
 
 
-
-
-add/ remove/ update /assign role)
