project-root/admin/module1.html

--- a/project-root/admin/module1.html
+++ b/project-root/admin/module1.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="manage_users.html">Manage Users</a></li>
-            <li><a href="/manage_lists/">Manage Lists</a></li>
+            <li><a href="/manage_lists.html/">Manage Lists</a></li>
             <li><a href="/reports/">Reports</a></li>
 
         </ul>
