project-root/admin/module1.html

--- a/project-root/admin/module1.html
+++ b/project-root/admin/module1.html
@@ -12,9 +12,9 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="manage_users.html">Manage Users</a></li>
-            <li><a href="/manage_lists.html/">Manage Lists</a></li>
-            <li><a href="/reports/">Reports</a></li>
+            <li><a href="../admin/manage_users/manage_users.html">Manage Users</a></li>
+            <li><a href="../admin/manage_lists/manage_lists.html">Manage Lists</a></li>
+            <li><a href="../admin/reports/reports.html">Reports</a></li>
 
         </ul>
     </nav>   
